# babai_asyn

./: README.md  auto_gen.m  babai_search_asyn.asv  babai_search_asyn.m  parallel_test.m  sils.m  sils_babai_asyn.asv  sils_babai_asyn.m  sils_reduction.m  sils_search.m
babai_asyn_c++/: Babai_search_asyn.cpp  Babai_search_asyn.h  Babai_search_mpi.h  Babai_search_temp.h  CMakeLists.txt  CppProperties.json  R_100.csv  R_20.csv  R_500.csv  SILS.cpp  SILS.h  main.cpp  matplotlibcpp.h  plot_helper.py  res_4096.csv  res_8192.csv  sils_babai_asyn.cpp  sils_babai_asyn.h  sils_driver_mex.mexa64  test.cpp
babai_asyn_c++/doxy/html/: annotated.html  annotated_dup.js  cils_8cpp.html  cils_8cpp.js  cils_8cpp__dep__incl.dot  cils_8cpp_source.html  cils_8h.html  cils_8h__incl.dot  cils__babai__search_8cpp.html  cils__babai__search_8cpp__dep__incl.dot  cils__block__search_8cpp.html  cils__block__search_8cpp__incl.dot  cils__block__search___g_p_u_8cpp.html  cils__block__search___g_p_u_8cpp.js  cils__ils__search_8cpp__dep__incl.dot  cils__partition__deficient_8cpp__dep__incl.dot  cils__partition__deficient_8cpp_source.html  cils__reduction_8cpp__dep__incl.dot  cils__reduction_8cpp__incl.dot  cils__reduction_8cpp_source.html  cils__sic__opt_8cpp.html  cils__sic__opt_8cpp__dep__incl.dot  cils__sic__opt_8cpp_source.html  cils__standard__test_8cpp.html  cils__standard__test_8cpp__incl.dot  cils__standard__test_8cpp_source.html  cils__underdetermined__test_8cpp.html  cils__underdetermined__test_8cpp_source.html  classcils_1_1cils.html  classcils_1_1cils.js  classcils_1_1cils__reduction-members.html  classcils_1_1cils__reduction.html  classcils_1_1cils__search-members.html  config_8h.html  config_8h.js  config_8h__incl.dot  dir_000003_000002.html  dir_1ff95392bc4e65547c61a42698fda530.js  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  (+21 more)
babai_asyn_c++/doxy/html/search/: all_1.js  all_11.js  all_12.js  all_14.js  all_15.js  all_18.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  all_d.js  classes_0.js  files_1.js  files_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_a.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  typedefs_1.js  variables_0.js  variables_1.js  variables_10.js  variables_13.js  variables_14.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_8.js  variables_a.js  variables_b.js  variables_e.js  (+1 more)
babai_asyn_c++/doxy/latex/: cils_8cpp__incl.dot  cils_8cpp_source.tex  cils_8h.tex  cils__block__search_8cpp.tex  cils__block__search_8cpp__dep__incl.dot  cils__block__search_8cpp_source.tex  cils__block__search___g_p_u_8cpp__incl.dot  cils__ils__search_8cpp.tex  cils__ils__search_8cpp__dep__incl.dot  cils__ils__search_8cpp_source.tex  cils__init__point_8cpp__dep__incl.dot  cils__init__point_8cpp_source.tex  cils__partition__deficient_8cpp__dep__incl.dot  cils__reduction_8cpp_source.tex  cils__sic__opt_8cpp.tex  cils__sic__opt_8cpp__dep__incl.dot  cils__standard__test_8cpp_source.tex  cils__underdetermined__test_8cpp__incl.dot  cils__underdetermined__test_8cpp_source.tex  classcils_1_1cils__search.tex  config_8h.tex  config_8h__dep__incl.dot  config_8h__incl.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_94e7a0fbe7f8eaf7f05ee7b02c647e9f.tex  dir_94e7a0fbe7f8eaf7f05ee7b02c647e9f_dep.dot  files.tex  helper_8h.tex  helper_8h__dep__incl.dot  helper_8h__incl.dot  helper_8h_source.tex  namespacecils.tex  namespacecils_1_1program__def.tex  namespacehelper.tex  namespaceplot__helper.tex  refman.aux  refman.ind  refman.out  refman.tex  refman.toc
babai_asyn_c++/src/: commands.html
babai_asyn_c++/src/example/: cils_LLL_test.cpp  cils_PBNP_test.cpp  cils_PBOB_test.cpp  cils_PBSIC_test.cpp  cils_gen_test.cpp  cils_standard_test.cpp  cils_test.cpp  cils_underdetermined_test.cpp  ils_block_search.cpp  plot_helper.py  py_qr.py
babai_asyn_c++/src/include/: CILS.h  CILS_Identity_Matrix.h  CILS_Matrix.h  CILS_Operations.h  CILS_Vector.h  SILS.h  cils.h  coder_array.h  coder_utils.h  config.h  helper.h  rt_nonfinite.cpp  rt_nonfinite.h  sils.h
babai_asyn_c++/src/plot/: 64_report_plot_bsic_ber.eps  64_report_plot_bsic_time.eps  64_report_plot_init_ber.eps  64_report_plot_init_time.eps  plot_bnp.py  plot_bob.py  plot_bsic.py  plot_bsic_2.py  plot_init.py  plot_lll.py  report_plot_BER_BSIC_64_all.eps  report_plot_BER_INIT_64_all.eps  report_plot_SNR_BER_BNP.eps  report_plot_SNR_SPU_BNP_4QAM_0.eps  report_plot_SNR_SPU_BNP_4QAM_3.eps  report_plot_SNR_SPU_BNP_64QAM_0.eps  report_plot_SNR_SPU_BNP_64QAM_3.eps  report_plot_SPU_BSIC_64_0_all.eps  report_plot_SPU_BSIC_64_1_all.eps
babai_asyn_c++/src/plot/new_results/: 32_64_report_plot_0_500_bsic.npz  32_64_report_plot_0_501_bsic.npz  (+7 more)
babai_asyn_c++/src/source/: CILS.cpp  CILS_Babai.cpp  CILS_Block_Babai.cpp  CILS_Block_SIC.cpp  CILS_Init_Point.cpp  CILS_OLM.cpp  CILS_Reduction.cpp  CILS_SECH_Search.cpp  CILS_SO_OBILS.cpp  CILS_SO_UBILS.cpp  CILS_UBLM.cpp  SILS.cpp  block_search_omp.cpp  cils.cpp  cils_babai_search.cpp  cils_block_search.cpp  cils_ils_search.cpp  cils_init_point.cpp  cils_partition_deficient.cpp  cils_reduction.cpp  cils_sic_opt.cpp  qrmcp.cpp  sils.cpp  sils_reduction.cpp
babai_asyn_c++_v2/src/: CMakeLists.txt
babai_asyn_c++_v2/src/include/: SILS.h
babai_asyn_c++_v2/src/source/: SILS.cpp
babai_asyn_cluster/: Babai_search_asyn.cpp  Babai_search_asyn.h  CMakeLists.txt  SILS.cpp  SILS.h  main.cpp  test  test.cpp
babai_asyn_cluster/src/example/: cils_test.cpp  ils_babai_search.cpp  ils_block_search.cpp
babai_asyn_cluster/src/include/: SILS.h  cils.h  config.h  sils.h
babai_asyn_cluster/src/source/: SILS.cpp  cils.cpp  cils_block_search.cpp  cils_block_search_OpenCL.cpp  cils_block_search_omp.cpp  cils_reduction.cpp  sils.cpp  sils_block_search_omp.cpp
babai_asyn_cuda/: Babai_search_asyn.cu  Babai_search_asyn.cuh  Babai_search_asyn.h  CMakeLists.txt  cils_cuda_solvers.cu  cils_cuda_solvers.cuh  ils_cuda_solvers.cu  ils_search_cuda.cu  main.cu  sils_search_cuda.cu
babai_asyn_matlab/: aspl.m  (+39 more)
(+438 files in other folders)
