cmake_minimum_required(VERSION 3.8.2)
project(sils)

find_package(OpenMP REQUIRED)
find_package(netCDF REQUIRED)
find_package(Eigen3 3.3 REQUIRED NO_MODULE)
set(CMAKE_CXX_STANDARD 17)

#Basic options
if (CXX_COMPILER_GNUCLANG OR CXX_COMPILER_INTEL)
    set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Werror")
    set(CMAKE_C_FLAGS "-std=c11 -Wall -Werror")
    set(CMAKE_CXX_FLAGS_DEBUG "-g")
    if (CXX_COMPILER_GNUCLANG)
        set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Og")
        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og")
    else ()
        set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O1")
        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1")
    endif ()
    set(CMAKE_CXX_FLAGS_RELEASE "-O3")
elseif (CXX_COMPILER_PGI)
    set(CMAKE_CXX_FLAGS "-std=c++14")
    set(CMAKE_C_FLAGS "-std=c11")
    set(CMAKE_CXX_FLAGS_DEBUG "-g")
    set(CMAKE_CXX_FLAGS_RELEASE "-O2")
elseif (CXX_COMPILER_CRAY)
    set(CMAKE_CXX_FLAGS "-h std=c++14 -h error_on_warning")
    set(CMAKE_C_FLAGS "-h std=c11 -h error_on_warning")
    set(CMAKE_CXX_FLAGS_DEBUG "-g -O1")
    set(CMAKE_CXX_FLAGS_RELEASE "-O2")
endif ()

if (OPENMP_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif ()
include_directories("${EIGEN3_INCLUDE_DIR}")

add_executable(sils test.cpp src/example/ils_block_search.cpp src/include/sils.h src/source/sils.cpp src/example/ils_babai_search.cpp src/source/sils_block_search_omp.cpp)# src/source/sils_reduction.cpp)

if (OpenMP_CXX_FOUND)
    target_link_libraries(sils  OpenMP::OpenMP_CXX)
    message("-- OpenMP_CXX_FOUND")
endif ()

if (netCDF_FOUND)
    target_link_libraries(sils  ${netCDF_LIBRARIES})
    message("-- netCDF_FOUND")
endif ()

if (Eigen3_FOUND)
#    target_link_libraries(sils Eigen3::Eigen)
    message("-- Eigen3_FOUND")
endif ()

